--- a/docs/UML/classes/callback_wait.adoc
+++ b/docs/UML/classes/callback_wait.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*CALLBACK_WAIT*
 
 h|*Description*
-2+a|
+2+a|Specialised descendant of `EVENT_ACTION <CALL_BACK_NOTIFICATION>` that adds a fail action. Used for representing post-callback actions.
 
 h|*Inherit*
 2+|`EVENT_WAIT`
@@ -18,18 +18,6 @@ h|*Attributes*
 h|*0..1*
 |*fail_action*: `EVENT_ACTION`
 a|Action to perform if any listened-for event returns a fail result.
-
-h|*0..1*
-|*resume_location*: `UID_BASED_ID`
-a|Reference to a resume Task in the current Plan, at which to restart when the request / handoff has completed.
-
-If not set, the following Task is assumed. It set, is typically an earlier Task, in situations where the current Task(s) are no longer needed once the external action has been completed.
-
-h|*0..1*
-|*resume_type*: `RESUME_TYPE`
-a|Procedure to execute when completion notification received, for example, to display a form, notify performer etc.
-
-TODO: determine details.
 
 h|*1..1 +
 (redefined)*
