--- a/docs/UML/classes/decision_branch.adoc
+++ b/docs/UML/classes/decision_branch.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*DECISION_BRANCH*
 
 h|*Description*
-2+a|A specialised kind of `TASK_GROUP` that corresponds to a particular decision path branch.
+2+a|A specialised kind of `TASK_GROUP` representing a branch in a Decision Group.
 
 h|*Inherit*
 2+|`TASK_GROUP`
