--- a/docs/UML/classes/event_action.adoc
+++ b/docs/UML/classes/event_action.adoc
@@ -19,4 +19,16 @@ a|System call to perform on receipt of event
 h|*0..1*
 |*message*: `DV_TEXT`
 a|Optional message to display to original Task context (i.e. application, form etc) if timer expires.
+
+h|*0..1*
+|*resume_location*: `UID_BASED_ID`
+a|Reference to a resume Task in the current Plan, at which to restart when the request / handoff has completed.
+
+If not set, the following Task is assumed. It set, is typically an earlier Task, in situations where the current Task(s) are no longer needed once the external action has been completed.
+
+h|*0..1*
+|*resume_type*: `RESUME_TYPE`
+a|Procedure to execute when completion notification received, for example, to display a form, notify performer etc.
+
+TODO: determine details.
 |===
