--- a/docs/UML/classes/m_task_action.adoc
+++ b/docs/UML/classes/m_task_action.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*M_TASK_ACTION*
 
 h|*Description*
-2+a|
+2+a|Materialised form of `TASK_ACTION` type.
 
 h|*Attributes*
 ^h|*Signature*
