--- a/docs/UML/classes/timer_event.adoc
+++ b/docs/UML/classes/timer_event.adoc
@@ -21,5 +21,5 @@ a|Delay from activation time to receive the event notification.
 
 h|*0..1*
 |*purpose*: `String`
-a|
+a|Optional explanatory purpose of Timer.
 |===
