--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -99,10 +99,12 @@ include::master05-design.adoc[leveloffset=+1]
 include::master06-model_overview.adoc[leveloffset=+1]
 include::master07-model_definition.adoc[leveloffset=+1]
 include::master08-definition_patterns.adoc[leveloffset=+1]
-include::master09-model_execution.adoc[leveloffset=+1]
-include::master10-ehr_semantics.adoc[leveloffset=+1]
-//include::master11-scenarios.adoc[leveloffset=+1]
-//include::master12-impl_guidance.adoc[leveloffset=+1]
+include::master09-model_materialised.adoc[leveloffset=+1]
+include::master10-model_history.adoc[leveloffset=+1]
+include::master11-service_model.adoc[leveloffset=+1]
+include::master12-ehr_semantics.adoc[leveloffset=+1]
+//include::master13-scenarios.adoc[leveloffset=+1]
+//include::master14-impl_guidance.adoc[leveloffset=+1]
 
 
 //
