--- a/docs/task_planning/master09-model_materialised.adoc
+++ b/docs/task_planning/master09-model_materialised.adoc
@@ -1,12 +1,12 @@
-= Task Execution Model
+= Task Materialised Model
 
 == Overview
 
-The following figure shows the execution related parts of the `proc.task_planning` package. The consists of two parts: the _materialised_ representation, and the _execution history_ part. The former is a partial specification of classes that could be instantiated at Task Plan execution time to track Plan execution, and is provided as a guide to how execution tracking can be done. The latter classes describe the execution history after the fact, in the form of _event records_ that can optionally be stored in the EHR after Task Plan execution has completed.
+The following figure shows the key classes in the `proc.task_planning.materialised` package. The consists of two parts: the _materialised_ representation, and the _execution history_ part. The former is a partial specification of classes that could be instantiated at Task Plan execution time to track Plan execution, and is provided as a guide to how execution tracking can be done. The latter classes describe the execution history after the fact, in the form of _event records_ that can optionally be stored in the EHR after Task Plan execution has completed.
 
 [.text-center]
-.proc.task_planning package - execution model
-image::{uml_export_dir}/diagrams/PROC-task_planning-execution.svg[id=proc_task_planning_execution, align="center"]
+.proc.task_planning.materialised package
+image::{uml_export_dir}/diagrams/PROC-task_planning.materialised.svg[id=proc_task_planning_materialised, align="center"]
 
 As described in <<Execution Semantics>>, Plan execution traverses three states: `materialised`, `activated` and `terminated`, as follows:
 
@@ -51,9 +51,9 @@ TBD: Allow pre-allocations
 
 == Activation
 
-A materialised Plan is activated when it is ready to be used. Activation 'starts the clock'; accordingly, the `M_TASK_PLAN` attribute `_start_time_` is set to the current time. Execution times in the Plan are converted to absolute clock times, or a form that can be related to clock time.
+A materialised Plan is activated when it is ready to be used. Activation starts the timeline clock; accordingly, the `M_TASK_PLAN` attribute `_start_time_` is set to the current time. Execution times in the Plan are converted to absolute clock times, or a form that can be related to clock time.
 
-The materialised form of the detailed structure of the plan may be instantiated fully, or only partially, where convenient. For example, if most of the plan has been completed, and only some steps remain, it may make sense to instantiate only the `M_XX` instances corresponding to those steps. On the other hand, an applicaiton may want to display the details of the whole plan, even when only a small part remains to be executed.
+The materialised form of the detailed structure of the Plan may be instantiated fully or only partially where convenient. For example, if most of the plan has been completed, and only some steps remain, it may make sense to instantiate only the `M_XX` instances corresponding to those steps. On the other hand, an application may want to display the details of the whole plan, even when only a small part remains to be executed.
 
 
 When the structure creation has been completed, the `_lifecycle_state_` attribute of one or more `M_TASK` instances may be set to `available`, or if picking up from a previous session, to other states (i.e. `completed` etc), as appropriate.
@@ -132,12 +132,15 @@ TaskState inferredState (Set<TaskState> sourceStates) {
 
 Since the runtime Task Group is also the top-level structure of the runtime Task Plan, the inferred state of the Plan as a whole is also provided by this algorithm applied to the top-level runtime Task Group.
 
-=== Notifications
+=== Task Availability
 
-Notifications can be specified to be generated at various lifecycle state changes.
+A workflow application or engine executing a Task Plan can determine the availability for execution of any Task Group or Task as follows:
 
-[.tbd]
-To be continued
+* *control-flow*: preceding Tasks / Groups within the current Task Group reach a terminal lifecycle state;
+* *wait state*: any Task or Group wait state has been exited due to the arrival of the relevant events, including timeline-related events;
+* *subject preconditions*: subject preconditions attached to the current Task Action are satisfied.
+
+The workflow application may provide an override capability so that a Task can be performed before it is determined to be available. This would enable a user to perform the Task anyway, causing the lifecycle transition '_override_` from `planned` to `available`. A corresponding `TASK_EVENT_RECORD` is created recording the use of the override
 
 === Context Switching
 
@@ -153,11 +156,9 @@ issue-runtime-persistence: if within the EHR, we could create a new 'pointer' on
 
 == Class Descriptions
 
+include::{uml_export_dir}/classes/m_work_plan.adoc[]
+
 include::{uml_export_dir}/classes/m_task_plan.adoc[]
-
-include::{uml_export_dir}/classes/m_plan_data_context.adoc[]
-
-include::{uml_export_dir}/classes/m_callback.adoc[]
 
 include::{uml_export_dir}/classes/m_plan_item.adoc[]
 
@@ -166,64 +167,3 @@ include::{uml_export_dir}/classes/m_task_group.adoc[]
 include::{uml_export_dir}/classes/m_task.adoc[]
 
 include::{uml_export_dir}/classes/m_task_action.adoc[]
-
-include::{uml_export_dir}/classes/m_condition_group.adoc[]
-
-include::{uml_export_dir}/classes/m_event_group.adoc[]
-
-include::{uml_export_dir}/classes/m_performer_allocation.adoc[]
-
-include::{uml_export_dir}/classes/m_resource_allocation.adoc[]
-
-== Task Plan Execution History
-
-The history of execution events is represented in the runtime instance of `EXECUTION_HISTORY`. This is a history of real world execution events that accumulates over the duration of processing of the Task Plan. Two types of event are used:
-
-* `TASK_EVENT_RECORD`: type representing a change to one consitutent Task. Thus, if the performer cancels a particular Task within the list, a `TASK_EVENT_RECORD` will be added to the history, including Task id, time, and reason; notifications can also be recorded on such events;
-* `TASK_PLAN_EVENT_RECORD_`: type representing any kind of execution event not linked to a specific Task, for example 'plan abandonment', 'new principal performer'.
-
-The first type may also include forward references to EHR Entries that were committed as a result of a Task being performed. This facilitates logical indexing of planned and performed work items.
-
-The Execution history will clearly grow and might become quite long for some Task Plan executions. How it may be persisted in various ways. The following possibilities are all compatible with both the model, and typical EHR requirements:
-
-* In the Task Plan application persistence:
-** persist the full history, delete or archive once the Task Plan is fully completed;
-* In the EHR:
-** persist the full history in some or all cases, if useful in the EHR environment (e.g. for teaching);
-** persist a partial / filtered version of the history, e.g. retain only _cancel_ and _abort_ events, on the basis that completed Tasks will show up as `ACTIONs` elsewhere in the EHR;
-** don't persist any of the history - rely on the workflow application persistence for it during execution, and forget afterward.
-
-This approach cleanly separates the definitional representation of a Task Plan, which should only change if changes to the plan are made, and the execution state, which is built during the work performance.
-
-=== Class Descriptions
-
-include::{uml_export_dir}/classes/task_plan_execution_history.adoc[leveloffset=+1]
-
-include::{uml_export_dir}/classes/event_record.adoc[leveloffset=+1]
-
-include::{uml_export_dir}/classes/task_plan_event_record.adoc[leveloffset=+1]
-
-include::{uml_export_dir}/classes/task_event_record.adoc[leveloffset=+1]
-
-include::{uml_export_dir}/classes/task_notification_record.adoc[leveloffset=+1]
-
-== Cost Tracking
-
-[.tbd]
-TBD: describe cost tracking.
-
-=== Class Descriptions
-
-include::{uml_export_dir}/classes/task_costing.adoc[leveloffset=+1]
-
-== Transactional Micro-service
-
-The information structures required to represent planned Tasks and references at runtime are likely to be non-trivial. For this reason, a Micro-service is defined, with a transactional interface that converts transactional calls to correct underlying information structures.
-
-[.tbd]
-TBC: 
-
-=== Class Descriptions
-
-include::{uml_export_dir}/classes/task_planning_ms.adoc[leveloffset=+1]
-
